# myScrapySpiders

./: .gitignore  .ruff.toml  README.md  cspell.json  pyproject.toml
dlsite/: scrapy.cfg  start.ps1
dlsite/dlsite/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
dlsite/dlsite/spiders/: rjid.py
dlsite/ipynb/: clean_image.ipynb
getchu/: scrapy.cfg  scripts.json  start.ps1
getchu/getchu/: items.py  middlewares.py  pipelines.py  settings.py
getchu/getchu/data/: unknown_list 1-1228800.7z
getchu/getchu/spiders/: getchuID.py
tutorial/tutorial/spiders/: quotes_spider2.py  quotes_spider3.py
