[tool.poetry]
name = "myscrapyspiders"
version = "0.1.0"
description = ""
authors = ["mudssky <mudssky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"

[tool.poetry.group.dev.dependencies]
Scrapy = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
