[tool.poetry]
name = "myscrapyspiders"
version = "0.1.0"
description = ""
authors = ["mudssky <mudssky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
skip-string-normalization = true

[tool.ruff]
line-length = 200

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
black = "^23.7.0"
pymongo = "^4.4.1"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
Scrapy = "^2.9.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
